Replace PWA popup with persistent install button in header
- Remove automatic popup after login (better UX)
- Add mobile-only install button in header (📱 Zainstaluj)
- Button shows on iOS and Chrome/Android when installable
- Click triggers native prompt or shows iOS instructions modal
- Hide button if app already installed (standalone mode)
- iOS modal with step-by-step installation guide
- Responsive: hide button text on very small screens
- Dark mode compatible styling

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,7 @@ extra_css:
 
 extra_javascript:
   - javascripts/password-gate.js
+  - javascripts/pwa-install.js
   - javascripts/homepage-widget.js
   - javascripts/quiz-engine.js
   - javascripts/calendar-widget.js
