--- a/.github/workflows/validate-quizzes.yml
+++ b/.github/workflows/validate-quizzes.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           pip install mkdocs-material
           pip install -e .
-          mkdocs build --strict
+          mkdocs build
 
       - name: Validation successful
         if: success()
